# clever-thumbnailer

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  config.ini  configure.ac  license.sh  setup.py
cleverthumbnailer/: __main__.py  audioanalyser.py  audiodata.py  config.ini  configurator.py  ctconstants.py  ctexceptions.py  enums.py  exceptions.py  featureextractor.py  mathtools.py  segment.py  test_audioData.py  thumbnailcreator.py
cleverthumbnailer/featureextractor/: __init__.py  applauseextractor.py  constqsegmentextractor.py  enums.py  febase.py  freqdomainextractor.py  loudnessextractor.py  timedomainextractor.py
cleverthumbnailer/test/: tempConfig.conf  test_applauseExtractor.py  test_audioAnalyser.py  test_audioData.py  test_configurator.py  test_constQSegmentExtractor.py  test_featureextractor.py  test_genericextractor.py  test_loudnessextractor.py  test_main.py  test_mathtools.py
cleverthumbnailer/tests/: .noserc  __init__.py  audioanalyser_tests.py  constqsegmentextractor_tests.py
cleverthumbnailer/utils/: __init__.py  appdirs.py  mathtools.py
kissfft/: Makefile.am
qmsegmenter/: Chromagram.cpp  ClusterMeltSegmenter.cpp  ClusterMeltSegmenter.h  ConstantQ.h  FFT.cpp  MFCC.cpp  Makefile.am  cluster_segmenter.h  hmm.c  segmenter-test.cpp  segmenter_test.cpp
src/: Makefile.am  analysis.cpp  clever-thumbnailer.c  clever-thumbnailer.h  loudness-test.c  loudness.c  trim.c  utils.c
